# serializer version: 1
# name: test_automation
  list([
    'report.csv',
    'reports-by-category.yaml',
    'reports-by-model-category.yaml',
    'reports-by-model-test-name.yaml',
    'reports-by-task-id.yaml',
    'reports-by-test-name.yaml',
    'reports-token-stats.yaml',
    'reports.yaml',
  ])
# ---
# name: test_automation.1
  tuple(
    'report.csv',
    '',
  )
# ---
# name: test_automation.2
  tuple(
    'reports-by-category.yaml',
    '''
      --- []


    ''',
  )
# ---
# name: test_automation.3
  tuple(
    'reports-by-model-category.yaml',
    '''
      --- []


    ''',
  )
# ---
# name: test_automation.4
  tuple(
    'reports-by-model-test-name.yaml',
    '''
      --- []


    ''',
  )
# ---
# name: test_automation.5
  tuple(
    'reports-by-task-id.yaml',
    '''
      --- []


    ''',
  )
# ---
# name: test_automation.6
  tuple(
    'reports-by-test-name.yaml',
    '''
      --- []


    ''',
  )
# ---
# name: test_automation.7
  tuple(
    'reports-token-stats.yaml',
    '''
      --- []


    ''',
  )
# ---
# name: test_automation.8
  tuple(
    'reports.yaml',
    '''
      --- []


    ''',
  )
# ---
